Wrote the css for echidna website and changed some HTML

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Long Beaked Echidna</title>
 	<link rel="icon" href="img/lbe-avatar.jpeg">
+	<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/echidna.css">
 </head>
 <body>
 	<!-- header element -->
@@ -14,9 +16,9 @@
 	<!-- main element -->
 	<main>
 		<h2>About the Long Beaked Echidna</h2>
-		<p>This is the coolest animals you have never heard of. Echidnas give us a view of the earliest mammals on Earth. There are three species of Long Beaked Echidna and they all live in Papua New Guinea</p>
+		<p>This is the coolest animal you have never heard of. Echidnas give us a view of the earliest mammals on Earth. There are three species of Long Beaked Echidna and they all live in Papua New Guinea</p>
 		<img src="img/lbe-drawing.jpeg">
-		<p>Naturalist drawing of a Long Beaked Echidna</p>
+		<p class="caption">Naturalist drawing of a Long Beaked Echidna</p>
 		
 		<!-- Characteristics -->
 		<h2>Long Beaked Echidna Characteristics</h2>
